# DiabetesPredictionCopy4

./: .replit  README.md  advanced_client_analytics.py  aggregation.py  aggregation_algorithms.py  app.py  app_backup.py  app_broken.py  app_fixed.py  client_simulator.py  client_visualization.py  committee_security.py  comprehensive_expanded_documentation.py  comprehensive_system_documentation.py  create_detailed_pdf.py  data_distribution.py  data_loader.py  data_preprocessing.py  detailed_comprehensive_documentation.py  diabetes.csv  differential_privacy.py  federated_learning.py  federated_learning_documentation.py  federated_system.py  fog_aggregation.py  gamified_tracker.py  hierarchical_fl_protocol.py  journey_visualization.py  medical_facility_distribution.py  medical_facility_distribution_20250703_071450.txt  neural_network.py  package-lock.json  package.json  performance_optimizer.py  privacy_engine.py  pyproject.toml  real_medical_data_fetcher.py  replit.md  saved_medical_facility_distributions.txt  secret_sharing.py  (+7 more)
.streamlit/: config.toml
attached_assets/: Pasted--Advanced-Analytics-Medical-Facility-Dashboard-Medical-Facility-Performance-Dashboard--1750078252399_1750078252400.txt  Pasted-Absolutely-Here-s-a-streamlined-code-gen-focused-prompt-that-you-can-directly-paste-into-an-AI-1749031393331.txt  Pasted-Collecting-usage-statistics-To-deactivate-set-browser-gatherUsageStats-to-false-You-can-no-1749041269596.txt  Pasted-Federated-Deep-Learning-on-Diabetes-Dataset-with-Committee-Based-Security-Differential-Privacy-and-1749476749975_1749476749976.txt  (+7 more)
