[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.4",
    "matplotlib>=3.10.3",
    "networkx>=3.1",
    "numpy>=1.26.4",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "reportlab>=4.4.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.1",
    "streamlit>=1.46.0",
    "tensorflow>=2.18.1",
    "trafilatura>=1.8.0",
]
