[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.46.0",
    "numpy>=1.26.4",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "plotly>=5.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "networkx>=2.8.0",
    "scipy>=1.9.0",
    "cryptography>=40.0.0",
    "requests>=2.25.0",
    "reportlab>=4.4.2",
]
